# ros2_practice_workspace

./: .gitignore  LICENSE  readme.md
ros2_action_client/: package.xml  setup.cfg  setup.py
ros2_action_server/: package.xml  setup.cfg  setup.py
ros2_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_interface/msg/: MathsMsg.msg
ros2_launch/: package.xml  setup.cfg  setup.py
ros2_launch/launch/: client_server_call.xml  pub_sub_launch.py  pub_sub_launch.xml  service_server_launch.py
ros2_lifecycle/: package.xml  setup.cfg  setup.py
ros2_pub/: package.xml  setup.cfg  setup.py
ros2_pub/launch/: pub_launch.py
ros2_pub/ros2_pub/: main.py
ros2_service_client/: package.xml  setup.cfg  setup.py
ros2_service_client/launch/: service_client_launch.py
ros2_service_client/ros2_service_client/: main.py
ros2_service_server/: package.xml  setup.cfg  setup.py
ros2_service_server/ros2_service_server/: main.py
ros2_sub/: package.xml  setup.cfg  setup.py
ros2_sub/launch/: sub_launch.py
ros2_sub/ros2_sub/: main.py
